changed background color

--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,11 @@ p, span, h1 {
   width: 800px;
 }
 
+/* -------------------------------------------------------------------------------------------------------------- */
+/* Buggy Course */
+#buggy-course {
+  background-color:skyblue;
+
+  /* width: 100vw;
+  height: 100vh; */
+}
