--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,19 @@ p, span, h1 {
 #buggy-course {
   background-color:skyblue;
 
-  /* width: 100vw;
-  height: 100vh; */
+  width: 600vw;
+  height: 100vh;
+}
+
+.buggy-road {
+  position: fixed;
+
+  /* fixing div to bottom left corner */
+  bottom: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 30%;
+
+  background-color: #cad9a9;
 }
