--- a/css/style.css
+++ b/css/style.css
@@ -130,19 +130,32 @@ p, span, h1 {
 #buggy-course {
   background-color:skyblue;
 
+  overflow-x: scroll;
+
   width: 600vw;
   height: 100vh;
-}
+
+  display: flex;
+  flex-direction: column;
+
+  box-sizing: border-box;
+
+  justify-content: end;
+} 
 
 .buggy-road {
+  box-sizing: border-box;
   position: fixed;
+  display: flex;
 
   /* fixing div to bottom left corner */
   bottom: 0;
   left: 0;
 
-  width: 100vw;
-  height: 30%;
+  width: 100%;
+  height: 10%;
 
   background-color: #cad9a9;
+
+  flex-grow: 0;
 }
