--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 /* -------------------------------------------------------------------------------------------------------------- */
 /* Generic Text Styling */
-p, span, h1 {
+p, span, h1, h3 {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -140,13 +140,59 @@ p, span, h1 {
 
   box-sizing: border-box;
 
-  justify-content: end;
+  justify-content: space-between;
 } 
 
+/* Header */
+header {
+  background-color: black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+
+  position: fixed;
+  width: 100vw;
+  height: 10vh;
+
+  padding: 1vh;
+
+  justify-content: space-between;
+}
+
+#sweepstakes-logo-header {
+  box-sizing: border-box;
+  height: 100%;
+  width: auto;
+
+  flex-shrink: 0;
+}
+
+.position-animation {
+  flex-grow: 1;
+
+  background-color: #466db4;
+}
+
+.location-txt {
+  box-sizing: border-box;
+  /* height: 100%; */
+  padding-top: 2%;
+  padding-bottom: 2%;
+  
+  text-align: center;
+  font-size: 100%;
+  font-weight: normal;
+  color: white;
+
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+/* Buggy Animation */
 .buggy-road {
   box-sizing: border-box;
   position: fixed;
-  display: flex;
+  overflow-y: hidden;
 
   /* fixing div to bottom left corner */
   bottom: 0;
@@ -157,5 +203,11 @@ p, span, h1 {
 
   background-color: #cad9a9;
 
-  flex-grow: 0;
+  flex-grow: 1;
+  margin-bottom: 0px;
+}
+
+svg {
+  padding: 0%;
+  margin: 0%;
 }
