--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,21 @@ header {
   padding-right: 1vw;
 }
 
+/* Content */
+.display-content {
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-around;
+  background-color: #9ea295;
+}
+
+#front-hills {
+  width: 60vw;
+}
+
 /* Buggy Animation */
 .buggy-road {
   box-sizing: border-box;
@@ -199,9 +214,10 @@ header {
   left: 0;
 
   width: 100%;
-  height: 10%;
+  min-height: 10%;
+  height: auto;
 
-  background-color: #cad9a9;
+  /* background-color: #cad9a9; */
 
   flex-grow: 1;
   margin-bottom: 0px;
