--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ p, span, h1, h3 {
   background-color:skyblue;
 
   overflow-x: scroll;
+  overflow-y: hidden;
 
   width: 600vw;
   height: 100vh;
@@ -190,6 +191,9 @@ header {
 
 /* Content */
 .display-content {
+  box-sizing: border-box;
+
+  padding-top: 10vh;
   width: fit-content;
   height: 100%;
   display: flex;
@@ -199,10 +203,40 @@ header {
   background-color: #9ea295;
 }
 
+/* Front Hills Content */
 #front-hills {
   width: 60vw;
+
+  text-align: center;
+
+  padding-left: auto;
+  padding-right: auto;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
 }
 
+.section-title {
+  background-color: antiquewhite;
+  box-sizing: border-box;
+
+  width: fit-content;
+  height: fit-content;
+
+  padding: 2%;
+  
+
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  padding: 2%;
+  font-weight: 600;
+}
 /* Buggy Animation */
 .buggy-road {
   box-sizing: border-box;
