--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ header {
 .position-animation {
   flex-grow: 1;
 
-  background-color: #466db4;
+  /* background-color: #466db4; */
 }
 
 .location-txt {
@@ -241,22 +241,52 @@ header {
   box-sizing: border-box;
 
   padding-top: 10vh;
-  width: fit-content;
+  padding-left: 1%;
+  padding-right: 1%;
+  width: max-content;
   height: 100%;
   display: flex;
   flex-direction: row;
 
   justify-content: space-around;
   align-items: center;
-  background-color:blue;
+  background-color:rgb(232, 232, 255);
 }
 
 video {
   margin-bottom: 10%;
-  height: 80%;
+  max-height: 80%;
+  min-width: 70%;
   width: auto;
 }
 
+.info-content {
+  margin-bottom: 10%;
+  height: 80%;
+  width: 20vw;
+
+  padding-right: 5%;
+  
+}
+.info-title {
+  font-size: larger;
+  font-weight: bold;
+  text-align: left;
+
+  padding-bottom: 2%;
+}
+
+.info-img {
+  height: 30%;
+  float: left;
+
+  padding-right: 2%;
+  padding-bottom: 2%;
+}
+
+.info-txt {
+
+}
 /* Buggy Animation */
 .buggy-road {
   box-sizing: border-box;
