--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,8 @@ a.button {
 
   display: flex;
   justify-content: center;
+
+  position: relative;
 }
 
 #map-with-checkpoints {
@@ -176,12 +178,18 @@ a.button {
 
   position: absolute;
 
-  left: 30.75%; 
-  bottom: 28%;
+  left: 33%; 
+  bottom: 30%;
   z-index: 10;
 
-  width: 347px;
-  height: 235px;
+  /* width: 347px;
+  height: 235px; */
+
+  width: 27%;
+  height: 20%;
+
+  min-height: 200px;
+  max-width: 300px;
 
   text-align: center;
 
@@ -190,13 +198,14 @@ a.button {
   background-color: #e8ebe3;
 
   justify-content: space-around;
+  align-items: center;
 }
 
 .map-hover-title {
   font-size: 48px;
   font-weight: 900;
 
-  width: fit-content;
+  width: 90%;
 
   border: solid;
   border-color: black;
@@ -205,6 +214,13 @@ a.button {
   padding-bottom: 5%;
 }
 
+.map-hover-txt {
+  width: 95%;
+
+  font-style: italic;
+  font-size: 20px;
+  font-weight: 700;
+}
 /* Positions of Specific Checkpoint Markers */
 #marker-one {
   right: 6%;
