--- a/css/style.css
+++ b/css/style.css
@@ -434,22 +434,41 @@ video {
 /* Buggy Animation */
 .buggy-road {
   box-sizing: border-box;
-  position: relative;
-  overflow-y: hidden;
+  position: fixed;
+  /* overflow-y: hidden; */
 
-  /* fixing div to bottom left corner
+  /* fixing div to bottom left corner */
   bottom: 0;
-  left: 0; */
+  left: 0;
 
   width: 100%;
-  height: 10%;
+  height: 20%;
 
-  background-color: #cad9a9;
+  /* background-color: #cad9a9; */
+  display: flex;
+  flex-direction: column;
 
   flex-grow: 1;
   margin-bottom: 0px;
 }
 
-#buggy-ol {
+#store-buggy-sprite {
+  height: 50%;
+  /* background-color: #466db4; */
 
+  position: relative;
+}
+
+#buggy-ol {
+  position: absolute;
+  left: 0;
+  top: -50%;
+
+  width: 200px;
+  /* height: 50%; */
+}
+
+#road {
+  background-color: #3b3b3b;
+  height: 50%;
 }
