--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,8 @@ header {
 .display-content {
   box-sizing: border-box;
 
-  padding-top: 10vh;
+  margin-top: 10vh;
+  padding-bottom: 20vh;
   width: fit-content;
   height: 90vh;
   display: flex;
@@ -442,7 +443,7 @@ video {
   left: 0;
 
   width: 100%;
-  height: 20%;
+  height: 20vh;
 
   /* background-color: #cad9a9; */
   display: flex;
@@ -453,22 +454,30 @@ video {
 }
 
 #store-buggy-sprite {
-  height: 50%;
+  box-sizing: border-box;
+  /* height: min-cont; */
   /* background-color: #466db4; */
 
   position: relative;
+  height: 50%;
 }
 
 #buggy-ol {
   position: absolute;
   left: 0;
-  top: -50%;
+  bottom: 0;
 
-  width: 200px;
-  /* height: 50%; */
+  /* width: 200px; */
+  height: 100%;
 }
 
 #road {
   background-color: #3b3b3b;
+  width: inherit;
   height: 50%;
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
+
