--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ header {
   display: none; 
 }
 
+/* Styling for Section Title Divs */
 .begin-section {
   width: 20vw;
   height: inherit;
@@ -383,6 +384,7 @@ header {
   font-weight: 600;
 }
 
+/* Styling for Informational Divs */
 .info-template {
   box-sizing: border-box;
 
@@ -407,16 +409,12 @@ iframe {
 }
 
 .info-content {
-  margin-top: 10%;
-  margin-bottom: 10%;
-  height: 100%;
-  min-width: 300px;
-  max-width: 40vw;
+  height: inherit;
 
-  padding-right: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
 
-  padding-top: .5%;
-  padding-bottom: .5%;
+  display: flex;
 }
 
 .info-title {
@@ -442,7 +440,48 @@ iframe {
   height: inherit;
 }
 
-/* Buggy Animation */
+/*Styling for Featured Images and Associated Captions */
+.img-and-caption {
+  box-sizing: border-box;
+  margin: auto;
+  padding: 5%;
+  background-color: crimson;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 100%;
+
+  text-align: center;
+}
+
+.featured-buggies {
+  height: 75%;
+}
+
+.buggy-img-caption {
+  box-sizing: border-box;
+  font-size: medium;
+}
+
+.buggy-img-caption-italics {
+  box-sizing: border-box;
+  font-size: medium;
+  font-style: italic;
+}
+
+.buggy-name {
+  box-sizing: border-box;
+  font-size: large;
+  font-weight: 600;
+  text-decoration: underline solid black;
+  padding: 2% 0%;
+}
+
+
+/* ------------------------------------------------------------------------------------------------------- */
+/* Buggy Overlay */
 .buggy-road {
   box-sizing: border-box;
   position: fixed;
