--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ header {
   margin-top: 10vh;
   margin-bottom: 20vh;
   /* padding-bottom: 22vh; */
-  width: inherit;
+  width: auto;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -447,14 +447,14 @@ iframe {
 .img-and-caption {
   box-sizing: border-box;
   margin: auto;
-  padding: 5%;
+  padding: 1%;
   /* background-color: crimson; */
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  height: 100%;
+  height: 80%;
 
   text-align: center;
 }
@@ -485,7 +485,7 @@ iframe {
 
 /* Featured Teams Specific Stylings */
 .team-logo {
-  height: 70%;
+  height: 50%;
 }
 
 .team-name {
@@ -502,7 +502,7 @@ iframe {
   margin: auto;
 }
 
-/* button styling */
+/* visit team button styling */
 .visit-team {
   box-sizing: border-box;
 
@@ -516,6 +516,8 @@ iframe {
   background-color: ivory;
 
   border: none;
+
+  filter: drop-shadow(4px 6px 2px #686767);
 }
 
 .visit-team:hover {
