--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ header {
   padding-right: 1vw;
 }
 
+/* ------------------------------ */
 /* General Content Styling */
 .display-content {
   box-sizing: border-box;
@@ -356,8 +357,8 @@ header {
 
   text-align: center;
 
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 0.25%;
+  padding-right: 0.25%;
 
   display: flex;
   flex-direction: column;
@@ -448,7 +449,6 @@ iframe {
   box-sizing: border-box;
   margin: auto;
   padding: 1%;
-  /* background-color: crimson; */
 
   display: flex;
   flex-direction: column;
@@ -528,7 +528,22 @@ iframe {
   background-color: lightgray;
 }
 
+/* -------------------------- */
+/* Buggy Leaderboard */
+  .leaderboard {
+    box-sizing: border-box;
 
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    
+    align-items: center;
+  }
+
+  #buggy-2023 {
+    height: 80%;
+  }
 
 /* ------------------------------------------------------------------------------------------------------- */
 /* Buggy Overlay */
@@ -544,7 +559,6 @@ iframe {
   width: 100%;
   height: 20vh;
 
-  /* background-color: #cad9a9; */
   display: flex;
   flex-direction: column;
 
@@ -553,14 +567,6 @@ iframe {
 
   z-index: 10;
 }
-
-/* @media only screen and (max-device-width : 730px) {
-  .buggy-road {
-    position: fixed;
-    bottom: 0;
-    left: 0;   
-  }
-} */
 
 #store-buggy-sprite {
   box-sizing: border-box;
