--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,64 @@ iframe {
     height: 80%;
   }
 
+  .times-by-division {
+    box-sizing: border-box;
+
+    width: auto;
+    min-width: 300px;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+
+    text-align: left;
+
+    padding: 3%;
+
+    background-color: #ffffff;
+    border-radius: 2%;
+
+    margin: 0 2%;
+  }
+
+  .division-name {
+    box-sizing: border-box;
+    font-size: x-large;
+    font-weight: 600;
+    padding: 2% 0%;
+  }
+
+  .display-rankings {
+    box-sizing: border-box;
+
+    width: auto;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: black solid 1px;
+  }
+
+  .place-won {
+    box-sizing: border-box;
+
+    font-size: larger;
+    font-weight: bold;
+
+    padding-top: .5%;
+    padding-bottom: .5%;
+  }
+
+  .leaderboard-team-name {
+    box-sizing: border-box;
+
+    font-size: larger;
+  }
+
 /* ------------------------------------------------------------------------------------------------------- */
 /* Buggy Overlay */
 .buggy-road {
