--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,9 @@ header {
 
   margin-top: 10vh;
   margin-bottom: 20vh;
-  /* padding-bottom: 22vh; */
+  margin-left: 5vw;
+  margin-right: 5vw;
+
   width: auto;
   height: 100%;
   display: flex;
