--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 /* -------------------------------------------------------------------------------------------------------------- */
 /* Generic Text Styling */
-p, span, h1, h3, button {
+p, span, h1, h2, h3, h4, button {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -398,7 +398,6 @@ header {
   font-weight: bold;
 
   color: white;
-  text-decoration: underline solid white;
 }
 
 .section-subtitle {
@@ -523,7 +522,7 @@ iframe {
   box-sizing: border-box;
   font-size: large;
   font-weight: 600;
-  text-decoration: underline solid black;
+
   padding: 2% 0%;
 }
 
@@ -552,7 +551,7 @@ iframe {
   box-sizing: border-box;
   font-size: x-large;
   font-weight: 600;
-  text-decoration: underline solid black;
+
   padding: 2% 0%;
 }
 
@@ -622,7 +621,8 @@ iframe {
 
   font-size: larger;
   font-weight: 500;
-  text-decoration: underline solid black;
+
+  font-style: italic;
 }
 
 .record-video {
